[gd_scene load_steps=8 format=3 uid="uid://main_menu"]

[ext_resource type="Script" path="res://menu.gd" id="1_script"]
[ext_resource type="PackedScene" path="res://menu_background.tscn" id="2_bg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_normal"]
bg_color = Color(0.15, 0.12, 0.08, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.85, 0.65, 0.15, 0.6)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(0.2, 0.16, 0.1, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.95, 0.75, 0.25, 0.9)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_pressed"]
bg_color = Color(0.85, 0.65, 0.15, 0.3)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.85, 0.4, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.05, 0.04, 0.03, 0.7)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.85, 0.65, 0.15, 0.3)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font_size = 64
font_color = Color(0.95, 0.85, 0.5, 1)
outline_size = 8
outline_color = Color(0, 0, 0, 0.6)

[sub_resource type="LabelSettings" id="LabelSettings_loading"]
font_size = 48
font_color = Color(0.85, 0.65, 0.15, 1)
outline_size = 6
outline_color = Color(0, 0, 0, 0.8)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background3D" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Background3D"]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="MenuBackground" parent="Background3D/SubViewport" instance=ExtResource("2_bg")]

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Title" type="Label" parent="UI/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "GOLDEN ROOM"
label_settings = SubResource("LabelSettings_title")
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="UI/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="InstructionsPanel" type="PanelContainer" parent="UI/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="UI/CenterContainer/VBoxContainer/InstructionsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CenterContainer/VBoxContainer/InstructionsPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="InstructionsTitle" type="Label" parent="UI/CenterContainer/VBoxContainer/InstructionsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.8, 0.5, 1)
theme_override_font_sizes/font_size = 28
text = "Controls"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI/CenterContainer/VBoxContainer/InstructionsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12
theme_override_styles/separator = SubResource("StyleBoxFlat_panel")

[node name="Movement" type="Label" parent="UI/CenterContainer/VBoxContainer/InstructionsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.75, 0.5, 1)
theme_override_font_sizes/font_size = 22
text = "W A S D  -  Move"
horizontal_alignment = 1

[node name="Mouse" type="Label" parent="UI/CenterContainer/VBoxContainer/InstructionsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.75, 0.5, 1)
theme_override_font_sizes/font_size = 22
text = "Mouse  -  Look Around"
horizontal_alignment = 1

[node name="Flashlight" type="Label" parent="UI/CenterContainer/VBoxContainer/InstructionsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.75, 0.5, 1)
theme_override_font_sizes/font_size = 22
text = "F  -  Toggle Flashlight"
horizontal_alignment = 1

[node name="Escape" type="Label" parent="UI/CenterContainer/VBoxContainer/InstructionsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.75, 0.5, 1)
theme_override_font_sizes/font_size = 22
text = "ESC  -  Release Mouse"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="UI/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="StartButton" type="Button" parent="UI/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 70)
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.85, 0.5, 1)
theme_override_colors/font_hover_color = Color(1, 0.95, 0.7, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 0.9, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
text = "ENTER"

[node name="LoadingOverlay" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="LoadingOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoadingLabel" type="Label" parent="LoadingOverlay/CenterContainer"]
layout_mode = 2
text = "Entering..."
label_settings = SubResource("LabelSettings_loading")
horizontal_alignment = 1
